--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/notification.css">
 
     <title>Apps OI</title>
 </head>
@@ -1160,7 +1160,6 @@
 
         </div>
     </footer>
-
     <!-- /FOOTER -->
 
     <!-- MODAL - Tela para colocar o log de teste -->
@@ -1190,14 +1189,20 @@
     </div>
     <!-- /MODAL -->
 
+    <!-- NOTIFICATION -->
+    <div id="gridNotification" class="gridNotification"></div>
+    <!-- /NOTIFICATION -->
+
     <script src="assets/js/abertura.js"></script>
     <script src="assets/js/encerramento.js"></script>
     <script src="assets/js/email.js"></script>
     <script src="assets/js/editor.js"></script>
     <script src="assets/js/utilidade.js"></script>
     <script src="assets/js/modal.js"></script>
+    <script src="assets/js/notification.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 
 </body>
 
