add animação para esconder a lista

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Apps OI</title>
 </head>
 
-<body onload="init()">
+<body>
 
     <!-- nav | Menu Superior - Seleciona função a ser utilizada -->
     <nav class="tabs is-centered remove-margin-bottom">
@@ -274,7 +274,7 @@
                                             </button>
                                     </p>
                                 </div>
-                                <div id="abClientList" class="field"></div>
+                                <div id="abClientList" class="field list"></div>
                                 <!-- /campo cliente -->
 
                                 <!-- campo contatos do cpd -->
@@ -1190,6 +1190,8 @@
     <div id="gridNotification" class="gridNotification"></div>
     <!-- /NOTIFICATION -->
 
+    <script src="assets/js/localStorage.js"></script>
+    <script src="assets/js/list.js"></script>
     <script src="assets/js/abertura.js"></script>
     <script src="assets/js/encerramento.js"></script>
     <script src="assets/js/email.js"></script>
@@ -1198,8 +1200,6 @@
     <script src="assets/js/modal.js"></script>
     <script src="assets/js/notification.js"></script>
     <script src="assets/js/app.js"></script>
-    <script src="assets/js/localStorage.js"></script>
-    <script src="assets/js/list.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
 
