Retornando nome do botão para o input

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                                 <label class="label is-small">Cliente</label>
                                 <div class="field has-addons">
                                     <div class="control has-icons-left has-icons-right is-expanded">
-                                        <input id="abCliente" class="input is-small" type="text">
+                                        <input id="abClient" class="input is-small" type="text" autocomplete="off">
                                         <span class="icon is-small is-left"><i class="fas fa-ethernet"></i></span>
                                     </div>
 
