--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
                 </a>
             </li>
 
+            <!-- Guia Editor de Texto -->
+            <li id="tab_posicionamento">
+                <a onclick="posicionamento()">
+                    <span class="icon is-small">
+                                                            <i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+                    <span>Posicionamento</span>
+                </a>
+            </li>
+
         </ul>
     </nav>
     <!-- /nav | Menu Superior -->
@@ -1138,6 +1147,10 @@
 
             </div>
             <!-- /EDITOR DE TEXTO -->
+
+            <div id="posicionamento" class="container is-max-desktop">
+
+            </div>
         </div>
 
     </section>
