--- a/index.html
+++ b/index.html
@@ -1148,9 +1148,203 @@
             </div>
             <!-- /EDITOR DE TEXTO -->
 
+            <!-- POSICIONAMENTO -->
             <div id="posicionamento" class="container is-max-desktop">
+                <div class="field">
+                    <label class="label">Posicionamento</label>
+                </div>
 
+                <div class="card">
+                    <div class="card-content">
+
+                        <!-- campo Posto -->
+                        <div class="field is-horizontal">
+
+                            <div class="field-label is-small">
+                                <label class="label is-small">Posto : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded">
+                                        <div class="select is-fullwidth is-small">
+                                            <select id="poPosto">
+                                              <option>N/A</option>
+                                              <option>Fibra</option>
+                                              <option>Transmissão</option>
+                                              <option>Redea</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="field">
+                                    <div class="control is-expanded">
+                                        <div class="select is-fullwidth is-small">
+                                            <select id="poPosto">
+                                              <option>Vtal</option>
+                                              <option>Oi</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="field-label is-small">
+                                    <label class="label is-small">BA :</label>
+                                </div>
+
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: 123456789">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <!-- /campo Posto -->
+
+                        <!-- campo Causa -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Causa : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: IDENTIFICADO MUX SEM GERENCIA">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Causa -->
+
+                        <!-- campo Localidade -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Localidade : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: CIDADE - ESTADO">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Localidade -->
+
+                        <!-- campo Descrição -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Descrição : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: TRAMITADO PARA O POSTO REALIZA O ACIONAMENTO DA EQUIPE.">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Descrição -->
+
+                        <!-- campo Escalonamento -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Escalonamento : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: ESCALONADO ">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Escalonamento -->
+
+                        <!-- campo Previsão / Status -->
+                        <div class="field is-horizontal">
+
+                            <div class="field-label is-small">
+                                <label class="label is-small">Previsão : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="oi@oi.com.br">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+
+                                <div class="field-label is-small">
+                                    <label class="label is-small">Prox. Status :</label>
+                                </div>
+
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <input id="abEmail" class="input is-small" type="text" placeholder="oi@oi.com.br">
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <!-- /campo Previsão / Status -->
+
+                        <!-- campo Detalhes -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Detalhes : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <textarea id="abCPD" class="textarea is-small" rows="2"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Detalhes -->
+
+                        <!-- campo Log's -->
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                                <label class="label is-small">Log's : </label>
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <div class="control is-expanded has-icons-left has-icons-right">
+                                        <textarea id="abCPD" class="textarea is-small" rows="5"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Log's -->
+
+                        <div class="field is-horizontal">
+                            <div class="field-label is-small">
+                            </div>
+                            <div class="field-body">
+                                <div class="field">
+                                    <button class="button is-primary" onclick="poButtonGerarTexto()">Gerar Texto</button>
+                                    <button class="button is-info" onclick="poButtonEnviarEditor()">Enviar para o Editor de Texto</button>
+                                    <button class="button is-info" onclick="poButtonLimpar()">Limpar</button>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /campo Log's -->
+
+                    </div>
+                </div>
             </div>
+            <!-- /POSICIONAMENTO -->
         </div>
 
     </section>
