--- a/index.html
+++ b/index.html
@@ -1169,9 +1169,9 @@
                                         <div class="select is-fullwidth is-small">
                                             <select id="poPosto">
                                               <option>N/A</option>
-                                              <option>Fibra</option>
-                                              <option>Transmissão</option>
-                                              <option>Redea</option>
+                                              <option>FIBRA</option>
+                                              <option>TRANSMISSÃO</option>
+                                              <option>REDEA</option>
                                             </select>
                                         </div>
                                     </div>
@@ -1180,9 +1180,9 @@
                                 <div class="field">
                                     <div class="control is-expanded">
                                         <div class="select is-fullwidth is-small">
-                                            <select id="poPosto">
-                                              <option>Vtal</option>
-                                              <option>Oi</option>
+                                            <select id="poPerimetro">
+                                              <option>VTAL</option>
+                                              <option>OI</option>
                                             </select>
                                         </div>
                                     </div>
@@ -1194,7 +1194,7 @@
 
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: 123456789">
+                                        <input id="poBa" class="input is-small" type="text" placeholder="Ex.: 123456789">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1212,7 +1212,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: IDENTIFICADO MUX SEM GERENCIA">
+                                        <input id="poCausa" class="input is-small" type="text" placeholder="Ex.: IDENTIFICADO MUX SEM GERENCIA">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1228,7 +1228,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: CIDADE - ESTADO">
+                                        <input id="poLocalidade" class="input is-small" type="text" placeholder="Ex.: CIDADE - ESTADO">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1244,7 +1244,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: TRAMITADO PARA O POSTO REALIZA O ACIONAMENTO DA EQUIPE.">
+                                        <input id="poDescricao" class="input is-small" type="text" placeholder="Ex.: TRAMITADO PARA O POSTO REALIZA O ACIONAMENTO DA EQUIPE.">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1260,7 +1260,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="Ex.: ESCALONADO ">
+                                        <input id="poEscalonamento" class="input is-small" type="text" placeholder="Ex.: ESCALONADO ">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1277,7 +1277,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="oi@oi.com.br">
+                                        <input id="poPrevisao" class="input is-small" type="text" placeholder="oi@oi.com.br">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1288,7 +1288,7 @@
 
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="abEmail" class="input is-small" type="text" placeholder="oi@oi.com.br">
+                                        <input id="poProxStatus" class="input is-small" type="text" placeholder="oi@oi.com.br">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1306,7 +1306,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <textarea id="abCPD" class="textarea is-small" rows="2"></textarea>
+                                        <textarea id="poDetalhes" class="textarea is-small" rows="2"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -1321,7 +1321,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <textarea id="abCPD" class="textarea is-small" rows="5"></textarea>
+                                        <textarea id="poLog" class="textarea is-small" rows="5"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -1410,6 +1410,7 @@
     <script src="assets/js/notification.js"></script>
     <script src="assets/js/modal.js"></script>
     <script src="assets/js/editor.js"></script>
+    <script src="assets/js/posicionamento.js"></script>
     <script src="assets/js/email.js"></script>
     <script src="assets/js/encerramento.js"></script>
     <script src="assets/js/abertura.js"></script>
