Feito logica para build do posicionamento

--- a/index.html
+++ b/index.html
@@ -1168,7 +1168,7 @@
                                     <div class="control is-expanded">
                                         <div class="select is-fullwidth is-small">
                                             <select id="poPosto">
-                                              <option>N/A</option>
+                                              <option>CLD</option>
                                               <option>FIBRA</option>
                                               <option>TRANSMISSÃO</option>
                                               <option>REDEA</option>
@@ -1212,7 +1212,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poCausa" class="input is-small" type="text" placeholder="Ex.: IDENTIFICADO MUX SEM GERENCIA">
+                                        <input id="poCausa" class="input is-small" type="text" placeholder="(CAMPO OPCIONAL) Ex.: IDENTIFICADO MUX SEM GERENCIA">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1228,7 +1228,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poLocalidade" class="input is-small" type="text" placeholder="Ex.: CIDADE - ESTADO">
+                                        <input id="poLocalidade" class="input is-small" type="text" placeholder="(CAMPO OPCIONAL) Ex.: CIDADE - ESTADO">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1244,8 +1244,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poDescricao" class="input is-small" type="text" placeholder="Ex.: TRAMITADO PARA O POSTO REALIZA O ACIONAMENTO DA EQUIPE.">
-                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                        <textarea id="poDescricao" class="textarea is-small" rows="5" placeholder="Ex.: TRAMITADO PARA O POSTO REALIZAR O ACIONAMENTO DA EQUIPE."></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -1260,7 +1259,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poEscalonamento" class="input is-small" type="text" placeholder="Ex.: ESCALONADO ">
+                                        <input id="poEscalonamento" class="input is-small" type="text" placeholder="(CAMPO OPCIONAL) Ex.: ESCALONADO">
                                         <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
@@ -1277,8 +1276,8 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poPrevisao" class="input is-small" type="text" placeholder="oi@oi.com.br">
-                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                        <input id="poPrevisao" class="input is-small" type="text" placeholder="">
+                                        <!-- <span class="icon is-small is-left"><i class="fas fa-headset"></i></span> -->
                                     </div>
                                 </div>
 
@@ -1288,8 +1287,8 @@
 
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poProxStatus" class="input is-small" type="text" placeholder="oi@oi.com.br">
-                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
+                                        <input id="poProxStatus" class="input is-small" type="text" placeholder="">
+                                        <!-- <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>s -->
                                     </div>
                                 </div>
 
@@ -1306,7 +1305,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <textarea id="poDetalhes" class="textarea is-small" rows="2"></textarea>
+                                        <textarea id="poDetalhes" class="textarea is-small" rows="2" placeholder="(CAMPO OPCIONAL)"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -1321,7 +1320,7 @@
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
-                                        <textarea id="poLog" class="textarea is-small" rows="5"></textarea>
+                                        <textarea id="poLog" class="textarea is-small" rows="5" placeholder="(CAMPO OPCIONAL)"></textarea>
                                     </div>
                                 </div>
                             </div>
