Adicionando na Tela

--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
                             </div>
                             <div class="field-body">
                                 <div class="field">
-                                    <button class="button is-primary" onclick="poButtonGerarTexto()">Gerar Texto</button>
+                                    <button class="button is-primary" onclick="poButtonGerarPosicionamento()">Gerar Texto</button>
                                     <button class="button is-info" onclick="poButtonEnviarEditor()">Enviar para o Editor de Texto</button>
                                     <button class="button is-info" onclick="poButtonLimpar()">Limpar</button>
                                 </div>
